Merge pull request #234 from folio-org/MODAUD-285
MODAUD-285: Fix creating current quarter partitions